@@ -1,11 +1,11 @@
 package org.jfoundry.infrastructure.persistence.mybatis;
 
+import org.jfoundry.domain.event.EventRecordable;
 import org.jfoundry.infrastructure.persistence.mybatis.support.TestOrder;
 import org.jfoundry.infrastructure.persistence.mybatis.support.TestOrderId;
 import org.jfoundry.infrastructure.persistence.mybatis.support.TestOrderMapper;
 import org.jfoundry.infrastructure.persistence.mybatis.support.TestOrderRepository;
 import org.jfoundry.infrastructure.persistence.mybatis.support.TestOrderStatus;
-import org.jfoundry.test.DomainEventCapture;
 import org.jmolecules.event.types.DomainEvent;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -25,7 +25,7 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 /// - modify / modifyAll 更新链路 + 0 行防御
 /// - remove 删除链路 + 0 行防御
 /// - findById 加载链路
-/// - 事件移交链路(add/modify/remove 成功后移交到 DomainEventPublisher)
+/// - 上下文注册链接(add/modify/remove 成功后向 DomainEventContext 注册聚合)
 @SpringBootTest(classes = PersistenceTestConfig.class)
 class MybatisPlusRepositoryIntegrationTest {
 
@@ -36,54 +36,59 @@ class MybatisPlusRepositoryIntegrationTest {
     private TestOrderMapper mapper;
 
     @Autowired
-    private DomainEventCapture eventCapture;
+    private PersistenceTestConfig.TestDomainEventContext domainEventContext;
 
     @BeforeEach
     void cleanDb() {
         mapper.delete(null);
-        eventCapture.drained();
+        domainEventContext.drainRegistered();
     }
 
     // ---- add 链路 ----
 
     @Test
-    void add_新聚合_单条插入成功_事件移交() {
+    void add_新聚合_单条插入成功_注册聚合且不清空事件() {
         TestOrderId id = new TestOrderId("ORD-001");
         TestOrder order = TestOrder.create(id, 100);
+        List<DomainEvent> expectedEvents = order.drainEvents();
+        assertThat(expectedEvents).hasSize(1);
+        TestOrder orderWithEvents = TestOrder.create(id, 100);
 
-        repository.add(order);
+        repository.add(orderWithEvents);
 
         TestOrder loaded = repository.findById(id);
         assertThat(loaded).isNotNull();
         assertThat(loaded.getStatus()).isEqualTo(TestOrderStatus.CREATED);
         assertThat(loaded.getAmount()).isEqualTo(100);
 
-        List<DomainEvent> events = eventCapture.drained();
-        assertThat(events).hasSize(1);
-        assertThat(events.get(0).getClass().getSimpleName()).isEqualTo("TestOrderCreatedEvent");
+        assertThat(domainEventContext.drainRegistered()).containsExactly(orderWithEvents);
+        assertThat(orderWithEvents.drainEvents())
+                .singleElement()
+                .isInstanceOf(expectedEvents.getFirst().getClass());
     }
 
     @Test
-    void add_主键冲突_抛异常_且不移交事件() {
+    void add_主键冲突_抛异常_且不注册聚合() {
         TestOrderId id = new TestOrderId("ORD-DUP");
         TestOrder first = TestOrder.create(id, 100);
         repository.add(first);
-        eventCapture.drained();
+        domainEventContext.drainRegistered();
 
         TestOrder second = TestOrder.create(id, 200);
         assertThatThrownBy(() -> repository.add(second))
                 .isInstanceOf(DuplicateKeyException.class);
 
-        assertThat(eventCapture.drained()).isEmpty();
+        assertThat(domainEventContext.drainRegistered()).isEmpty();
+        assertThat(second.drainEvents()).hasSize(1);
     }
 
     // ---- modify 链路 ----
 
     @Test
-    void modify_已存在聚合_update成功_事件移交() {
+    void modify_已存在聚合_update成功_注册聚合且不清空事件() {
         TestOrderId id = new TestOrderId("ORD-MOD-1");
         repository.add(TestOrder.create(id, 100));
-        eventCapture.drained();
+        domainEventContext.drainRegistered();
 
         TestOrder loaded = repository.findById(id);
         loaded.markPaid();
@@ -93,9 +98,11 @@ class MybatisPlusRepositoryIntegrationTest {
         TestOrder afterModify = repository.findById(id);
         assertThat(afterModify.getStatus()).isEqualTo(TestOrderStatus.PAID);
 
-        List<DomainEvent> events = eventCapture.drained();
-        assertThat(events).hasSize(1);
-        assertThat(events.get(0).getClass().getSimpleName()).isEqualTo("TestOrderStatusChangedEvent");
+        assertThat(domainEventContext.drainRegistered()).containsExactly(loaded);
+        assertThat(loaded.drainEvents())
+                .singleElement()
+                .isInstanceOfSatisfying(DomainEvent.class,
+                        event -> assertThat(event.getClass().getSimpleName()).isEqualTo("TestOrderStatusChangedEvent"));
     }
 
     @Test
@@ -107,13 +114,14 @@ class MybatisPlusRepositoryIntegrationTest {
                 .isInstanceOf(IllegalStateException.class)
                 .hasMessageContaining("modify affected 0 rows");
 
-        assertThat(eventCapture.drained()).isEmpty();
+        assertThat(domainEventContext.drainRegistered()).isEmpty();
+        assertThat(ghost.drainEvents()).hasSize(1);
     }
 
     // ---- addAll / modifyAll 链路 ----
 
     @Test
-    void addAll_批量插入成功_全部事件移交() {
+    void addAll_批量插入成功_按顺序注册全部聚合且不清空事件() {
         TestOrder o1 = TestOrder.create(new TestOrderId("ORD-B-1"), 10);
         TestOrder o2 = TestOrder.create(new TestOrderId("ORD-B-2"), 20);
         TestOrder o3 = TestOrder.create(new TestOrderId("ORD-B-3"), 30);
@@ -124,18 +132,21 @@ class MybatisPlusRepositoryIntegrationTest {
         assertThat(repository.findById(o2.getId())).isNotNull();
         assertThat(repository.findById(o3.getId())).isNotNull();
 
-        assertThat(eventCapture.drained()).hasSize(3);
+        assertThat(domainEventContext.drainRegistered()).containsExactly(o1, o2, o3);
+        assertThat(o1.drainEvents()).hasSize(1);
+        assertThat(o2.drainEvents()).hasSize(1);
+        assertThat(o3.drainEvents()).hasSize(1);
     }
 
     @Test
-    void modifyAll_批量修改成功_全部事件移交() {
+    void modifyAll_批量修改成功_按顺序注册全部聚合且不清空事件() {
         TestOrderId id1 = new TestOrderId("ORD-MB-1");
         TestOrderId id2 = new TestOrderId("ORD-MB-2");
         repository.addAll(List.of(
                 TestOrder.create(id1, 10),
                 TestOrder.create(id2, 20)
         ));
-        eventCapture.drained();
+        domainEventContext.drainRegistered();
 
         TestOrder loaded1 = repository.findById(id1);
         TestOrder loaded2 = repository.findById(id2);
@@ -147,14 +158,29 @@ class MybatisPlusRepositoryIntegrationTest {
         assertThat(repository.findById(id1).getStatus()).isEqualTo(TestOrderStatus.PAID);
         assertThat(repository.findById(id2).getStatus()).isEqualTo(TestOrderStatus.CANCELLED);
 
-        assertThat(eventCapture.drained()).hasSize(2);
+        assertThat(domainEventContext.drainRegistered()).containsExactly(loaded1, loaded2);
+        assertThat(loaded1.drainEvents()).hasSize(1);
+        assertThat(loaded2.drainEvents()).hasSize(1);
     }
 
     @Test
-    void modifyAll_部分元素不存在_抛IllegalStateException_事务回滚_事件不移交() {
+    void 同一聚合在同一上下文内多次持久化_只注册一次且事件持续累积() {
+        TestOrderId id = new TestOrderId("ORD-DEDUP-1");
+        TestOrder order = TestOrder.create(id, 100);
+
+        repository.add(order);
+        order.markPaid();
+        repository.modify(order);
+
+        assertThat(domainEventContext.drainRegistered()).containsExactly(order);
+        assertThat(order.drainEvents()).hasSize(2);
+    }
+
+    @Test
+    void modifyAll_部分元素不存在_抛IllegalStateException_聚合不注册且事件保留() {
         TestOrderId id1 = new TestOrderId("ORD-MB-OK");
         repository.add(TestOrder.create(id1, 10));
-        eventCapture.drained();
+        domainEventContext.drainRegistered();
 
         TestOrder loaded1 = repository.findById(id1);
         loaded1.markPaid();
@@ -164,32 +190,30 @@ class MybatisPlusRepositoryIntegrationTest {
                 .isInstanceOf(IllegalStateException.class)
                 .hasMessageContaining("modifyAll affected 0 rows");
 
-        // 注意:addAll/modifyAll 不带 @Transactional,modifyAll 抛异常时已 modify 的元素会保留更新
-        // 但事件移交是全部完成后才执行,因此事件列表为空
-        assertThat(eventCapture.drained()).isEmpty();
+        assertThat(domainEventContext.drainRegistered()).isEmpty();
+        assertThat(loaded1.drainEvents()).hasSize(1);
+        assertThat(ghost.drainEvents()).hasSize(1);
     }
 
     // ---- remove 链路 ----
 
     @Test
-    void remove_已存在_删除成功_事件移交() {
+    void remove_已存在_删除成功_注册聚合且不清空事件() {
         TestOrderId id = new TestOrderId("ORD-RM-1");
         TestOrder order = TestOrder.create(id, 100);
         repository.add(order);
-        eventCapture.drained();
+        domainEventContext.drainRegistered();
 
-        // 加载后取消(记录业务事件),再 remove
-        TestOrder loaded = repository.findById(id);
-        loaded.cancel();
-        repository.modify(loaded);
-        eventCapture.drained();
-
-        // remove 自身不要求事件,但聚合上若有未移交事件也会一并移交
         TestOrder toRemove = repository.findById(id);
+        toRemove.cancel();
         repository.remove(toRemove);
 
         assertThat(repository.findById(id)).isNull();
-        assertThat(eventCapture.drained()).isEmpty();
+        assertThat(domainEventContext.drainRegistered()).containsExactly(toRemove);
+        assertThat(toRemove.drainEvents())
+                .singleElement()
+                .isInstanceOfSatisfying(DomainEvent.class,
+                        event -> assertThat(event.getClass().getSimpleName()).isEqualTo("TestOrderStatusChangedEvent"));
     }
 
     @Test
@@ -200,6 +224,9 @@ class MybatisPlusRepositoryIntegrationTest {
         assertThatThrownBy(() -> repository.remove(ghost))
                 .isInstanceOf(IllegalStateException.class)
                 .hasMessageContaining("remove affected 0 rows");
+
+        assertThat(domainEventContext.drainRegistered()).isEmpty();
+        assertThat(ghost.drainEvents()).hasSize(1);
     }
 
     // ---- findById 链路 ----
